--- a/app/template.html
+++ b/app/template.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
+    <title>{%title%}</title>
+    {%meta%}
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
 </head>
 
 <body>
-    <div id="root">%html%</div>
-    <script>%script%</script>
+    <div id="root">{%html%}</div>
+    <script>{%script%}</script>
     <script async src="/bundle.js"></script>
 </body>
 
